# dearpygui_app_example

./: pyproject.toml
