[tool.poetry]
name = "user-interface"
version = "0.1.0"
description = "manage dependencies of the user interface package"
authors = ["ramcharanthota <ramthota@antikytherarobotics.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dearpygui = "^2.0.0"
matplotlib = "<3.9.0"
pandas = "1.5.3" 
scikit-learn = "^1.2.2"  # Compatible with Python 3.8
joblib = "^1.2.0"  # Specify if needed separately; it is often a dependency of scikit-learn


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
